--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "sass": "sass public/sass/stock/custom.scss public/css/custom.min.css -w"
+        "build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
-    },
-    "dependencies": {
-        "sass": "^1.77.8"
     }
 }
